--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2 class="card-title">Django File Upload Tutorial</h2>
-  <p class="card-text">Example Django 2.1 / Python 3.7</p>
-  <p class="card-text">
-    Vitor Freitas<br>
-    <a href="https://twitter.com/vitorfs">@vitorfs</a>
-  </p>
+  <h2 class="card-title">Django Music Transcription</h2>
 {% endblock %}
