--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
   <title>{% block title %}My Site{% endblock %}</title>
 </head>
 <body>
@@ -17,26 +16,8 @@
       }
   </style>
 
-  <nav class="navbar navbar-expand-lg navbar-light mb-4" style="background-color:#decdc3">
-    <div class="container">
-      <a class="navbar-brand" href="{% url 'home' %}">My Site</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'upload' %}">Upload</a>
-          </li>
-        </ul>
-      </div>
-      <span class="hello-msg">{{ request.user }}</span>
-      <span><a class="hello-msg" href="{% url 'logout' %}">Выйти</a></span>
-    </div>
-  </nav>
+  {% include 'navbar.html' %}
+
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-10 col-md-12">
