--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,13 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Upload</h2>
+  <h2>Загрузка</h2>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="file" name="document">
-    <button type="submit">Конвертировать</button>
+{#      {{ form.as_p }}#}
+    {{ form.name }}
+    {{ form.melody }}
+    <button type="submit">Загрузить</button>
   </form>
-  {% if url %}
-    <p>Uploaded file: <a href="{{ url }}">{{ url }}</a></p>
-  {% endif %}
 {% endblock %}
