--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
+            <a class="nav-link" href="{% url 'home' %}">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'upload' %}">Upload</a>
+            <a class="nav-link" href="{% url 'upload' %}">Загрузить</a>
           </li>
         </ul>
       </div>
