--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -24,7 +24,7 @@
                                 <td><a href="http://127.0.0.1:8000/media/{{ melody.pdf }}">Скачать</a></td>
 
                             {% else %}
-                                <td>Не сконвертирован</td>
+                                <td><a href="{% url 'converte' pk=melody.pk %}"> Конвертировать</a>
                             {% endif %}
                         </tr>
                     {% endfor %}
