--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Загрузка</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.name }}
-    {{ form.melody }}
-    <button type="submit">Загрузить</button>
-  </form>
+    <h2>Загрузка</h2>
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.name }}
+        {{ form.melody }}
+        <button type="submit">Загрузить</button>
+    </form>
+    {% for message in messages %}
+        <p id="messages">{{ message }}</p>
+    {% endfor %}
+
 {% endblock %}
